fix: select overflow

--- a/src/components/Select/select.module.css
+++ b/src/components/Select/select.module.css
@@ -131,15 +131,13 @@
     height: 40px;
 
     &Button {
+      display: flex;
+      align-items: center;
       padding: 0 8px;
       color: var(--color-standard-text);
       font-size: var(--font-size-sm);
       width: 100%;
       height: 100%;
-      text-align: left;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      overflow: hidden;
 
       &:disabled {
         cursor: not-allowed;
@@ -154,6 +152,12 @@
       &.selected {
         color: var(--color-primary);
       }
+    }
+
+    &Text {
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
     }
   }
 }
